Adding possible answers to questions

--- a/public/views/partials/directives/questions.jade
+++ b/public/views/partials/directives/questions.jade
@@ -17,8 +17,18 @@ ul.list-group(ui-sortable="sortableOptions", ng-model="survey.questions")
                p Question type
             dd
                select(ng-model="question.type", ng-options="type for type in types", ng-change="updateSurvey()")
-            dt(ng-hide="question.type === 'text' || question.type === 'boolean'")
-               p Possible answers
-            dd(ng-hide="question.type === 'text' || question.type === 'boolean'")
-               ul.list-group
-                  li.list-group-item(ng-repeat="answer in question.possibleAnswers") {{ answer }}
+            div(ng-hide="question.type === 'text' || question.type === 'boolean'")
+               dt
+                  p Possible answers
+               dd
+                  ul.list-group
+                     li.list-group-item(ng-repeat="answer in question.possibleAnswers")
+                        .row
+                           .col-sm-10
+                              h5 {{ answer }}
+                           .col-sm-2
+                              a.selectable(ng-click="deleteAnswer($parent.$index, $index)")
+                                 h5
+                                    span.glyphicon.glyphicon-remove.pull-right
+
+                  button.btn.btn-default(ng-click="addAnswer($index)") Add answer
