Small changes + moved sortableOptions to directive controller

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -102,3 +102,10 @@ html {
 .filter-input {
   margin-top: 15px;
 }
+
+.selected-question {
+  -webkit-box-shadow: -1px 0px 25px 6px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 0px 25px 6px rgba(0,0,0,0.75);
+  box-shadow: -1px 0px 25px 6px rgba(0,0,0,0.75);
+  z-index: 3;
+}
