--- a/public/views/partials/editQuestions.jade
+++ b/public/views/partials/editQuestions.jade
@@ -1,4 +1,4 @@
 h3 Questions
 
-questions(sortable-options="sortableOptions", survey="survey", update-survey="updateSurvey()")
+questions(survey="survey", update-survey="updateSurvey()")
 button.btn.btn-default(ng-click="addQuestion()") Add new question
