--- a/public/views/partials/directives/surveyDetails.jade
+++ b/public/views/partials/directives/surveyDetails.jade
@@ -8,6 +8,6 @@ dl.dl-horizontal
    dt
       h4 Description:
    dd
-      a(href="#", editable-text="survey.metadata.description", onbeforesave="updateSurvey()")
+      a(href="#", editable-textarea="survey.metadata.description", onbeforesave="updateSurvey()")
          h4
             span.line-breakable {{ survey.metadata.description || "" }}
