Modal when deleting question

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -109,3 +109,7 @@ html {
   box-shadow: -1px 0px 25px 6px rgba(0,0,0,0.75);
   z-index: 3;
 }
+
+input.editable-has-buttons.editable-input.form-control.ng-pristine.ng-valid {
+  min-width: 400px;
+}
