Generating link to survey and first respondent page

--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -3,20 +3,20 @@ html(ng-app='surveyApp')
   head
     title= title
     block styles
-      link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.min.css')
-      link(rel='stylesheet', href='lib/jquery-ui.min.css')
-      link(rel='stylesheet', href='lib/angular/xeditable/css/xeditable.css')
+      link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.min.css')
+      link(rel='stylesheet', href='/lib/jquery-ui.min.css')
+      link(rel='stylesheet', href='/lib/angular/xeditable/css/xeditable.css')
       link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
 
     block scripts
-      script(src='lib/lodash.min.js')
-      script(src='lib/jquery-1.11.1.min.js')
-      script(src='lib/jquery-ui.min.js')
-      script(src='lib/bootstrap/js/bootstrap.min.js')
-      script(src='lib/angular/angular.min.js')
-      script(src='lib/angular/angular-ui-router.min.js')
-      script(src='lib/angular/angular-sanitize.min.js')
-      script(src='lib/angular/xeditable/js/xeditable.min.js')
-      script(src='lib/angular/sortable.js')
+      script(src='/lib/lodash.min.js')
+      script(src='/lib/jquery-1.11.1.min.js')
+      script(src='/lib/jquery-ui.min.js')
+      script(src='/lib/bootstrap/js/bootstrap.min.js')
+      script(src='/lib/angular/angular.min.js')
+      script(src='/lib/angular/angular-ui-router.min.js')
+      script(src='/lib/angular/angular-sanitize.min.js')
+      script(src='/lib/angular/xeditable/js/xeditable.min.js')
+      script(src='/lib/angular/sortable.js')
