--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -27,13 +27,12 @@ block content
 
 block append scripts
   script(src='javascripts/common/main.js')
-  script(src='javascripts/common/directives/actionMenu.js')
+  script(src='javascripts/common/services/Surveys.js')
   script(src='javascripts/surveys/main.js')
-  script(src='javascripts/surveys/services/Surveys.js')
   script(src='javascripts/surveys/controllers/DashboardController.js')
   script(src='javascripts/surveys/controllers/NewSurveyController.js')
   script(src='javascripts/surveys/controllers/SurveyDetailsController.js')
   script(src='javascripts/surveys/directives/surveyList.js')
   script(src='javascripts/surveys/directives/surveyDetails.js')
   script(src='javascripts/surveys/directives/questions.js')
-  script(src='javascripts/app.js')
+  script(src='javascripts/surveyApp.js')
