--- a/public/views/partials/surveyView.jade
+++ b/public/views/partials/surveyView.jade
@@ -10,7 +10,7 @@
           a.list-group-item() Basic info
           a.list-group-item(ui-sref=".edit", ui-sref-active="active") Edit description
           a.list-group-item(ui-sref=".editQuestions", ui-sref-active="active") Edit questions
-          a.list-group-item() Sharing
+          a.list-group-item(ui-sref=".sharing", ui-sref-active="active") Sharing
           a.list-group-item() Analysis
 
 
