Saving survey answers to database

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -113,3 +113,11 @@ html {
 input.editable-has-buttons.editable-input.form-control.ng-pristine.ng-valid {
   min-width: 400px;
 }
+
+span.glyphicon {
+  font-size: 0.9em;
+}
+
+.question-list-item {
+  margin-bottom: 30px;
+}
