--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -28,6 +28,7 @@ block content
 block append scripts
   script(src='javascripts/common/main.js')
   script(src='javascripts/common/services/Surveys.js')
+  script(src='javascripts/common/services/Answers.js')
   script(src='javascripts/surveys/main.js')
   script(src='javascripts/surveys/controllers/DashboardController.js')
   script(src='javascripts/surveys/controllers/NewSurveyController.js')
