--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -26,6 +26,8 @@ block content
 
 
 block append scripts
+  script(src='lib/Chart.min.js')
+  script(src='lib/angular/angles.js')
   script(src='javascripts/common/main.js')
   script(src='javascripts/common/services/Surveys.js')
   script(src='javascripts/common/services/Answers.js')
