--- a/public/views/respondentPage.jade
+++ b/public/views/respondentPage.jade
@@ -12,27 +12,15 @@ block content
               h4 \#{{ $index+1 }}  {{ question.body }}
             .panel-body
               div(ng-show="question.type === 'text'")
-                input.form-control(type="text", ng-model="answers[$index]", ng-keypress="dd(answers)")
+                input.form-control(type="text", ng-model="answers[$index].respond", ng-keypress="dd(answers)")
               div(ng-show="question.type === 'oneChoice'")
                 ul
                   li(ng-repeat="possibleAnswer in question.possibleAnswers")
                     label
-                      input(type="radio", ng-model="$parent.answers[$parent.$index]", value="{{possibleAnswer}}")
+                      input(type="radio", ng-model="$parent.answers[$parent.$index].respond", value="{{possibleAnswer}}")
                       |  {{possibleAnswer}}
 
           button.btn.btn-primary(ng-click="saveAnswers()") Send answers
-
-    //ul.list-group(ng-show="survey !== null")
-      li.list-group-item.question-list-item(ng-repeat="question in survey.questions")
-        h4 \#{{ $index+1 }}  {{ question.body }}
-        div(ng-show="question.type === 'text'")
-          input.form-control(type="text", ng-model="answers[$index]", ng-keypress="dd(answers)")
-        div(ng-show="question.type === 'oneChoice'")
-          ul
-            li(ng-repeat="possibleAnswer in question.possibleAnswers")
-              label
-                input(type="radio", ng-model="$parent.answers[$parent.$index]", value="{{possibleAnswer}}")
-                |  {{possibleAnswer}}
 
     div(ng-show="survey === null")
       p There's no survey with that code.
