--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -121,3 +121,25 @@ span.glyphicon {
 .question-list-item {
   margin-bottom: 30px;
 }
+
+.alert {
+  border-radius: 1px;
+}
+
+.list-group-item:first-child {
+  border-top-right-radius: 1px;
+  border-top-left-radius: 1px;
+}
+
+.list-group-item:last-child {
+  border-bottom-right-radius: 1px;
+  border-bottom-left-radius: 1px;
+}
+
+.panel {
+  border-radius: 1px;
+}
+
+.btn {
+  border-radius: 1px;
+}
