Changed angles to tc-angular-chartjs to show charts

--- a/public/views/partials/analysis.jade
+++ b/public/views/partials/analysis.jade
@@ -6,4 +6,4 @@ br
   .panel-body
     .row
       .col-sm-7
-        canvas(chart='Bar', legend='true', data="answer", responsive="true")
+        canvas(tc-chartjs-bar, legend='true', chart-options="options", chart-data="answer", auto-legend)
