--- a/public/views/profile.jade
+++ b/public/views/profile.jade
@@ -27,7 +27,7 @@ block content
 
 block append scripts
   script(src='lib/Chart.min.js')
-  script(src='lib/angular/angles.js')
+  script(src='lib/angular/tc-angular-chartjs.min.js')
   script(src='javascripts/common/main.js')
   script(src='javascripts/common/services/Surveys.js')
   script(src='javascripts/common/services/Answers.js')
