--- a/public/views/partials/analysis.jade
+++ b/public/views/partials/analysis.jade
@@ -5,5 +5,5 @@ br
     h4 {{ survey.questions[questionNumber].body }}
   .panel-body
     .row
-      .col-sm-7
-        canvas(tc-chartjs-bar, legend='true', chart-options="options", chart-data="answer", auto-legend)
+      .col-sm-11
+        canvas(tc-chartjs-bar, legend='true', chart-options="options", chart-data="answer")
