--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -138,8 +138,16 @@ span.glyphicon {
 
 .panel {
   border-radius: 1px;
+  .panel-heading {
+    border-top-right-radius: 1px;
+    border-top-left-radius: 1px;
+  }
 }
 
 .btn {
+  border-radius: 1px;
+}
+
+.modal-content {
   border-radius: 1px;
 }
