--- a/public/views/signup.jade
+++ b/public/views/signup.jade
@@ -22,7 +22,7 @@ block content
 
   .container-fluid
     .col-sm-4.col-sm-offset-4
-      .panel.panel-primary
+      .panel.panel-default
         .panel-heading
           h1 Signup
 
@@ -39,4 +39,4 @@ block content
               label Password
               input(type="password", class="form-control", name="password")
             br
-            button(type="submit", class="btn btn-warning btn-lg") Sign up!
+            button(type="submit", class="btn btn-primary btn-lg") Sign up!
