--- a/public/views/activation.jade
+++ b/public/views/activation.jade
@@ -1,2 +1,21 @@
-.panel.panel-default
-   h1 Hello
+extends layout
+block content
+
+   nav.navbar.navbar-default.navbar-fixed-top
+      .container-fluid
+         .navbar-header
+            button.navbar-toggle(type='button', data-toggle='collapse', data-target='.collapse.navbar-collapse')
+               span.sr-only Toggle navigation
+               span.icon-bar
+               span.icon-bar
+               span.icon-bar
+            a.navbar-brand(href='/') Surveys
+         .collapse.navbar-collapse
+            ul.nav.navbar-nav.navbar-right
+               li
+                  a(href='/login') Login
+               li
+                  a(href='/signup') Sign up
+
+   .container
+      p Please activate your account by clicking the link that was sent to your email address.
