First solution for restrict respondent to ony one answer

--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -20,3 +20,4 @@ html(ng-app='surveyApp')
       script(src='/lib/angular/angular-sanitize.min.js')
       script(src='/lib/angular/xeditable/js/xeditable.min.js')
       script(src='/lib/angular/sortable.js')
+      script(src='/lib/angular/ngStorage.js')
