Checking if all required questions are answered

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -151,3 +151,11 @@ span.glyphicon {
 .modal-content {
   border-radius: 1px;
 }
+
+.has-error {
+  border-color: #a11600;
+}
+
+.bold {
+  font-weight: bold;
+}
