--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -159,3 +159,12 @@ span.glyphicon {
 .bold {
   font-weight: bold;
 }
+
+input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="radio"].disabled, input[type="checkbox"].disabled, fieldset[disabled] input[type="radio"], fieldset[disabled] input[type="checkbox"] {
+   cursor: default;
+}
+
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+  cursor: default;
+  background-color: #ffffff;
+}
